[cli] Improve start script for designer (windows)